changing from mockito to mockk. finish chapter 5.